--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <p class="col-2">Cantidad</p>
             <p class="col-3">Total</p>            
         </div>
+        <div id="carritoMid">
+
+        </div>
     </div>
 
 
